src/App.css
@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Staatliches&display=swap");

:root {
	--black: #1f1f1f;
	--gray-100: #303030;
	--gray-200: #3d3d3d;
	--slate-gray: hsl(210, 10%, 47%);
	--bronze: #d1b487;
	--gold: #e0c673;
}

body {
	font-family: "Lato", sans-serif;
	background-color: var(--slate-gray);
	color: #fff;
	overflow-x: hidden;
}

*,
*::before,
*::after {
	box-sizing: border-box;
}

h1,
h2 {
	font-family: "Staatliches", cursive;
}

p {
	line-height: 1.6;
}

main {
	background: var(--gray-200);
	min-height: calc(100vh - 6rem);
	max-width: 1440px;
	margin: 0 auto;
	position: relative;
	background-image: linear-gradient(
		45deg,
		var(--gray-200) 25%,
		var(--gray-100) 25%,
		var(--gray-100) 50%,
		var(--gray-200) 50%,
		var(--gray-200) 75%,
		var(--gray-100) 75%,
		var(--gray-100) 100%
	);
	background-size: 56.57px 56.57px;
}

main::before,
main::after {
	content: "";
	position: absolute;
	top: 0;
	height: 100%;
	background-size: 100% 100%;
	z-index: -1;
}

main::before {
	width: 0.5rem;
	background-color: #fff;
	left: -0.5rem;
}

main::after {
	width: 2.5rem;
	right: -2.5rem;
	background-image: linear-gradient(
		90deg,
		#ffffff 20%,
		transparent 20%,
		transparent 40%,
		#ffffff 40%,
		#ffffff 60%,
		transparent 60%,
		transparent 80%,
		#ffffff 80%,
		#ffffff 100%
	);
}

main h1 {
	font-size: 3rem;
	font-weight: 900;
	text-align: center;
	margin: 0;
}

a {
	text-decoration: none;
	color: #fff;
}

@media screen and (max-width: 960px) {
	main {
		padding: 0 0.5rem;
	}
}

.title {
	font-size: 5rem;
	letter-spacing: 4px;
	padding: 1rem 0 2.5rem 0;
}

/* scrollbar */

::-webkit-scrollbar {
	width: 10px;
}

::-webkit-scrollbar-track {
	background: #f1f1f1;
}

::-webkit-scrollbar-thumb {
	background: #888;
}

::-webkit-scrollbar-thumb:hover {
	background: #555;
}

/*
	Home Page
*/

#home {
	display: flex;
	flex-direction: column;
	justify-content: center;
	isolation: isolate;
}

.welcome-header {
	position: absolute;
	top: 2rem;
	left: 0;
	width: 100%;
	z-index: -1;
	padding: 0 2rem;
}

.botan-img-container {
	display: flex;
	justify-content: center;
	position: relative;
}

.botan-img {
	object-fit: contain;
	width: 100%;
}

.welcome-text-wrapper {
	margin: auto;
	width: clamp(35ch, 100%, 55ch);
}

.welcome-text-wrapper::before,
.welcome-text-wrapper::after {
	content: "";
	height: 20px;
	width: 100%;
	background-color: var(--gold);
	display: block;
}

.welcome-text-wrapper::before {
	margin-bottom: -1px;
	clip-path: polygon(0 0, 0% 100%, 100% 100%);
}
.welcome-text-wrapper::after {
	margin-top: -1px;
	clip-path: polygon(100% 0, 0 0, 100% 100%);
}

.welcome-text {
	color: var(--black);
	background: var(--gold);
	padding: 1rem;
	width: 100%;
}

.welcome-text h2 {
	font-size: 2rem;
	font-weight: 600;
	margin-top: 0;
	margin-bottom: 0.25em;
}

.welcome-text p {
	margin: 0;
	font-size: 1.4rem;
}

@media screen and (min-width: 960px) {
	#home {
		max-height: calc(100vh - 6rem);
		flex-direction: row-reverse;
	}
	.botan-img-container {
		justify-content: right;
	}
	.welcome-text-wrapper {
		margin: auto 2rem auto 0;
	}
}

/*
	Projects Page
*/

#projects {
	position: relative;
	isolation: isolate;
}

.projects-container {
	display: flex;
	flex-direction: column;
	justify-content: center;
	align-items: center;
	padding: 0 2rem;
}

.project {
	display: flex;
	flex-direction: column;
	margin: 0 1rem 2rem 1rem;
	position: relative;
	isolation: isolate;
	max-width: 50rem;
	width: 100%;
	padding: 2rem;
	border-radius: 0.5rem;
	overflow: hidden;
	box-shadow: 0 2px 0.2rem rgba(0, 0, 0, 0.3), 0 4px 0.4rem rgba(0, 0, 0, 0.3),
		0 16px 0.8rem rgba(0, 0, 0, 0.3);

	border: 2px solid var(--bronze);
	transition: border 350ms ease-out;
}

.project:hover {
	border: 2px solid #fff;
}

.project-heading {
	width: max-content;
	height: max-content;
}

.project img {
	position: absolute;
	top: 0;
	left: 0;
	width: 100%;
	height: 100%;
	object-fit: cover;
	z-index: -2;
	filter: brightness(0.5);
	transition: filter 350ms ease-out, transform 350ms ease-out;
}

.project:hover img {
	filter: brightness(0.4);
	transform: scale(1.05);
}

.project h2 {
	font-family: "Lato", sans-serif;
	font-size: 2rem;
	font-weight: 900;
	padding-bottom: 0.2rem;
	position: relative;
}

.project h2::after {
	content: "";
	position: absolute;
	bottom: -0.1rem;
	left: 0;
	width: 100%;
	height: 0.15rem;
	background-color: var(--bronze);
	margin-top: 0.5rem;
	transition: transform 100ms ease-out;
}

.project:hover h2::after {
	transform: translateY(0.1rem);
}

.project-body {
	display: flex;
	flex-direction: column-reverse;
	padding-right: 1rem;
	overflow: hidden;
}

.project-desc {
	padding: 0.5rem;
	width: 100%;
}

@media screen and (min-width: 960px) {
	.project-body {
		flex-direction: row;
	}
}

/*
	Anniversary Page
*/

#anniversary {
	display: flex;
	flex-direction: column;
}

#anniversary_iframe {
	flex: 1;
	width: 100%;
	height: 100vh;
	border: none;
	display: block;
}

/* .map {
  position: absolute;
  top: 50%;
  left: 0;
  right: 0;
  margin: auto;
  -webkit-transform: translateY(-50%);
  -ms-transform: translateY(-50%);
  transform: translateY(-50%);
  display: flex;
  flex-flow: column;
  height: 100%;
} */

/* .map p {
  align-items: center;
  justify-content: center;
  width: 60%;
}

.map svg {
  display: block;
  align-items: center;
  justify-content: center;
  transform: scale(1.3, 1.2);
  background-color: #C3F4FE;
  margin: auto;
  border-radius: 10px;
}

.map>element.style {
  background-color: rgba(7, 205, 255, 0.6);
}

 */

/* 
	SSRB World Page
 */

#map {
	display: grid;
	grid-template-columns: minmax(150px, 25%) 1fr;
	width: 100%;
}

